# easy_accounting

./: DATABASE.md  docker-compose.yml  main.py  pyproject.toml  schema.erd
.claude/: settings.local.json
alembic/: env.py
alembic/versions/: 9a4e532becb9_initial_schema.py  af953ad7bf1e_add_ai_patterns_table.py
app/: config.py
app/bot/: create.py  states.py
app/bot/handlers/: __init__.py  account.py  ai.py  budget.py  cancel.py  category.py  settings.py  start.py  transaction.py
app/bot/keyboards/: inline.py  reply.py
app/bot/middlewares/: db.py
app/db/: base.py  models.py  seed.py  session.py
app/repositories/: __init__.py  account.py  ai_pattern.py  base.py  budget.py  category.py  exchange_rate.py  recurring_transaction.py  tag.py  transaction.py  user.py
app/services/: __init__.py  account.py  ai.py  base.py  budget.py  category.py  errors.py  exchange_rate.py  recurring.py  transaction.py  user.py
